--- a/Projects/03-CoffeeShop/css/master.css
+++ b/Projects/03-CoffeeShop/css/master.css
@@ -20,6 +20,10 @@ h1 {
 	font-family: sanchez;
 	font-size: 60px;
 	color: #fff;
+	text-align: center;
+	width: 80%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 h2 {
@@ -29,11 +33,70 @@ h2 {
 h3 {
 	font-size: 22px;
 	color: #ccc;
+	text-align: center;
+	line-height: 36px;
+	font-weight: 300;
+
 }
 
 header {
+	color: #222;
 	background-image: url(../images/header.jpg);
-	background-position: center center;
+	background-position: top center;
 	background-repeat: no-repeat;
-	background-size: 100%;
+	max-width: 2000px;
+	margin-bottom: 0px;
+	padding-bottom: 80px;
+	background-color: #AC8420;
+
 }
+
+.smaller {
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.large_logo {
+	margin: 0px;
+	padding-top: 100px;
+}
+
+.large_logo img {
+	display: block;
+	margin: 0px auto;
+}
+
+.menu {
+	background-color: #AC8420;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
+
+table {
+	width: 70%;
+	max-width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+caption {
+	font-family: sanchez;
+	font-style: condensed;
+	font-size: 32px;
+	font-color: #222;
+	padding: 20px;
+}
+
+tr {
+	color: white;
+}
+
+td {
+	padding: 10px;
+}
+
+
+
