--- a/Projects/05-PhotoApp/css/carousel.css
+++ b/Projects/05-PhotoApp/css/carousel.css
@@ -271,7 +271,7 @@
   width: 10px;
   height: 10px;
   background: #333333;
-  border-radius: 100%;
+  border-radius: 4px;
   margin: 0 3px;
   opacity: 0.5;
   overflow: hidden;
