--- a/Projects/05-PhotoApp/css/master.css
+++ b/Projects/05-PhotoApp/css/master.css
@@ -14,6 +14,12 @@ body {
 	font-family: roboto;
 }
 
+button {
+	margin: 0px;
+	border: 0px;
+	padding: 0px;
+}
+
 /* Header */
 
 
@@ -82,6 +88,12 @@ h2 {
 
 p {
 	font-family: 'Roboto';
+}
+
+.slideshow {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .niceshottext {
@@ -196,6 +208,7 @@ h4 {
 	font-weight: 300;
 	color: #2b3f4c;
 	margin-bottom: 10px;
+	margin-top: 10px;
 }
 
 .life_body_copy {
@@ -220,6 +233,10 @@ h4 {
 @media screen and (max-width: 979px){
 	h4 {
 		margin: 0px;
+		text-align: center;
+	}
+	.life_body_copy {
+		text-align: center;
 	}
 	.photo_thumbnails {
 		padding-top: 50px;
